@@ -3,6 +3,9 @@ This file lists the most important changes to
 the previous released version. For a full list of changes
 please refer to the ChangeLog file.
 
+New for version 2.9+:
+ - Add third locking method if file-based lock does not work.
+   https://salsa.debian.org/minicom-team/minicom/-/issues/9
 New for version 2.9:
  - Change Hardware Flow Control Default to No.
  - Timestamping mode is now saved and restored.
